tdf#141421 xml export: default stacksize for threads on macOS is too small

libxslt usage means lots of recursion for the sample document and the default
for non-main threads is 512kB, see
https://developer.apple.com/library/archive/qa/qa1419/_index.html
and contrary to linux it doesn't default to the value set via ulimit.

https://docs.microsoft.com/en-us/windows/win32/procthread/thread-stack-size
says default for Windows is 1MB, so use that as a new default.
(on linux it effectively is 8MB via ulimit, if not specified it would default
to 2MB for most architectures)

Change-Id: I10bd25301b0aea83e5bbb0c2103a0dd47a7e0736
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137269
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
(cherry picked from commit 1844326df477eb379f281e6f027fc8e6475f28bf)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137190
Reviewed-by: Caolán McNamara <caolanm@redhat.com>